@@ -1,19 +1,19 @@
-package com.rookies4
-        .myspringbootlab.service;
+package com.rookies4.myspringbootlab.service;
 
 import com.rookies4.myspringbootlab.controller.dto.BookDTO;
+import com.rookies4.myspringbootlab.controller.dto.PublisherDTO;
 import com.rookies4.myspringbootlab.entity.Book;
 import com.rookies4.myspringbootlab.entity.BookDetail;
+import com.rookies4.myspringbootlab.entity.Publisher;
 import com.rookies4.myspringbootlab.exception.BusinessException;
 import com.rookies4.myspringbootlab.exception.ErrorCode;
-import com.rookies4.myspringbootlab.repository.BookDetailRepository;
 import com.rookies4.myspringbootlab.repository.BookRepository;
+import com.rookies4.myspringbootlab.repository.PublisherRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,43 +21,89 @@ import java.util.stream.Collectors;
 public class BookService {
 
     private final BookRepository bookRepository;
-    private final BookDetailRepository bookDetailRepository;
+    private final PublisherRepository publisherRepository;
 
     public List<BookDTO.Response> getAllBooks() {
         return bookRepository.findAll()
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BookDTO.Response getBookById(Long id) {
         Book book = bookRepository.findByIdWithBookDetail(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-        return BookDTO.Response.fromEntity(book);
+
+        BookDTO.Response response = BookDTO.Response.fromEntity(book);
+
+        if (book.getPublisher() != null && response.getPublisher() != null) {
+            Long publisherId = book.getPublisher().getId();
+            Long bookCount = bookRepository.countByPublisherId(publisherId);
+
+            PublisherDTO.SimpleResponse publisherWithCount =
+                    PublisherDTO.SimpleResponse.fromEntityWithCount(
+                            book.getPublisher(), bookCount);
+
+            response.setPublisher(publisherWithCount);
+        }
+
+        return response;
     }
 
     public BookDTO.Response getBookByIsbn(String isbn) {
         Book book = bookRepository.findByIsbnWithBookDetail(isbn)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
-        return BookDTO.Response.fromEntity(book);
+
+        BookDTO.Response response = BookDTO.Response.fromEntity(book);
+
+        if (book.getPublisher() != null && response.getPublisher() != null) {
+            Long publisherId = book.getPublisher().getId();
+            Long bookCount = bookRepository.countByPublisherId(publisherId);
+
+            PublisherDTO.SimpleResponse publisherWithCount =
+                    PublisherDTO.SimpleResponse.fromEntityWithCount(
+                            book.getPublisher(), bookCount);
+
+            response.setPublisher(publisherWithCount);
+        }
+
+        return response;
     }
 
     public List<BookDTO.Response> getBooksByAuthor(String author) {
         return bookRepository.findByAuthorContainingIgnoreCase(author)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<BookDTO.Response> getBooksByTitle(String title) {
         return bookRepository.findByTitleContainingIgnoreCase(title)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+
+    public List<BookDTO.Response> getBooksByPublisherId(Long publisherId) {
+        // Validate publisher exists
+        if (!publisherRepository.existsById(publisherId)) {
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                    "Publisher", "id", publisherId);
+        }
+
+        return bookRepository.findByPublisherId(publisherId)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .toList();
     }
 
     @Transactional
     public BookDTO.Response createBook(BookDTO.Request request) {
+        Publisher publisher = publisherRepository.findById(request.getPublisherId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Publisher", "id", request.getPublisherId()));
+
         if (bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
@@ -68,31 +114,42 @@ public class BookService {
                 .isbn(request.getIsbn())
                 .price(request.getPrice())
                 .publishDate(request.getPublishDate())
+                .publisher(publisher)
                 .build();
 
         if (request.getDetailRequest() != null) {
+        // Create book detail if provided
+        if (request.getDetail() != null) {
             BookDetail bookDetail = BookDetail.builder()
-                    .description(request.getDetailRequest().getDescription())
                     .language(request.getDetailRequest().getLanguage())
-                    .pageCount(request.getDetailRequest().getPageCount())
-                    .publisher(request.getDetailRequest().getPublisher())
-                    .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
-                    .edition(request.getDetailRequest().getEdition())
+                    .description(request.getDetail().getDescription())
+                    .language(request.getDetail().getLanguage())
+                    .pageCount(request.getDetail().getPageCount())
+                    .publisher(request.getDetail().getPublisher())
+                    .coverImageUrl(request.getDetail().getCoverImageUrl())
+                    .edition(request.getDetail().getEdition())
                     .book(book)
                     .build();
 
             book.setBookDetail(bookDetail);
         }
 
+        // Save and return the book
         Book savedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(savedBook);
     }
 
     @Transactional
     public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
+        // Find the book
         Book book = bookRepository.findById(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
+        // Validate publisher exists (if changing)
+        Publisher publisher = publisherRepository.findById(request.getPublisherId())
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Publisher", "id", request.getPublisherId()));
+        // Check if another book already has the ISBN
         if (!book.getIsbn().equals(request.getIsbn()) &&
                 bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
@@ -103,124 +160,32 @@ public class BookService {
         book.setIsbn(request.getIsbn());
         book.setPrice(request.getPrice());
         book.setPublishDate(request.getPublishDate());
+        book.setPublisher(publisher);
 
-        if (request.getDetailRequest() != null) {
             BookDetail bookDetail = book.getBookDetail();
 
+
+        // Update book detail if provided
+        if (request.getDetail() != null) {
+            BookDetail bookDetail = book.getBookDetail();
+
+            // Create new detail if not exists
             if (bookDetail == null) {
                 bookDetail = new BookDetail();
                 bookDetail.setBook(book);
                 book.setBookDetail(bookDetail);
             }
 
-            bookDetail.setDescription(request.getDetailRequest().getDescription());
-            bookDetail.setLanguage(request.getDetailRequest().getLanguage());
-            bookDetail.setPageCount(request.getDetailRequest().getPageCount());
-            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
-            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
-            bookDetail.setEdition(request.getDetailRequest().getEdition());
+            // Update detail fields
+            bookDetail.setDescription(request.getDetail().getDescription());
+            bookDetail.setLanguage(request.getDetail().getLanguage());
+            bookDetail.setPageCount(request.getDetail().getPageCount());
+            bookDetail.setPublisher(request.getDetail().getPublisher());
+            bookDetail.setCoverImageUrl(request.getDetail().getCoverImageUrl());
+            bookDetail.setEdition(request.getDetail().getEdition());
         }
 
-        Book updatedBook = bookRepository.save(book);
-        return BookDTO.Response.fromEntity(updatedBook);
-    }
-
-    @Transactional
-    public BookDTO.Response partialUpdateBook(Long id, BookDTO.PatchRequest request) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        if (request.getTitle() != null) {
-            book.setTitle(request.getTitle());
-        }
-
-        if (request.getAuthor() != null) {
-            book.setAuthor(request.getAuthor());
-        }
-
-        if (request.getIsbn() != null) {
-            if (!book.getIsbn().equals(request.getIsbn()) &&
-                    bookRepository.existsByIsbn(request.getIsbn())) {
-                throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
-            }
-            book.setIsbn(request.getIsbn());
-        }
-
-        if (request.getPrice() != null) {
-            book.setPrice(request.getPrice());
-        }
-
-        if (request.getPublishDate() != null) {
-            book.setPublishDate(request.getPublishDate());
-        }
-
-        if (request.getDetailRequest() != null) {
-            BookDetail bookDetail = book.getBookDetail();
-
-            if (bookDetail == null) {
-                bookDetail = new BookDetail();
-                bookDetail.setBook(book);
-                book.setBookDetail(bookDetail);
-            }
-
-            BookDTO.BookDetailPatchRequest detailRequest = request.getDetailRequest();
-
-            if (detailRequest.getDescription() != null) {
-                bookDetail.setDescription(detailRequest.getDescription());
-            }
-            if (detailRequest.getLanguage() != null) {
-                bookDetail.setLanguage(detailRequest.getLanguage());
-            }
-            if (detailRequest.getPageCount() != null) {
-                bookDetail.setPageCount(detailRequest.getPageCount());
-            }
-            if (detailRequest.getPublisher() != null) {
-                bookDetail.setPublisher(detailRequest.getPublisher());
-            }
-            if (detailRequest.getCoverImageUrl() != null) {
-                bookDetail.setCoverImageUrl(detailRequest.getCoverImageUrl());
-            }
-            if (detailRequest.getEdition() != null) {
-                bookDetail.setEdition(detailRequest.getEdition());
-            }
-        }
-
-        Book updatedBook = bookRepository.save(book);
-        return BookDTO.Response.fromEntity(updatedBook);
-    }
-
-    @Transactional
-    public BookDTO.Response updateBookDetail(Long id, BookDTO.BookDetailPatchRequest request) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        BookDetail bookDetail = book.getBookDetail();
-
-        if (bookDetail == null) {
-            bookDetail = new BookDetail();
-            bookDetail.setBook(book);
-            book.setBookDetail(bookDetail);
-        }
-
-        if (request.getDescription() != null) {
-            bookDetail.setDescription(request.getDescription());
-        }
-        if (request.getLanguage() != null) {
-            bookDetail.setLanguage(request.getLanguage());
-        }
-        if (request.getPageCount() != null) {
-            bookDetail.setPageCount(request.getPageCount());
-        }
-        if (request.getPublisher() != null) {
-            bookDetail.setPublisher(request.getPublisher());
-        }
-        if (request.getCoverImageUrl() != null) {
-            bookDetail.setCoverImageUrl(request.getCoverImageUrl());
-        }
-        if (request.getEdition() != null) {
-            bookDetail.setEdition(request.getEdition());
-        }
-
+        // Save and return updated book
         Book updatedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(updatedBook);
     }
